[package]
name = "flag-matcher"
version = "0.1.0"
authors = ["nkornelsen <69067104+nkornelsen@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared" }
rand = "0.8.4"